--- a/scss/blocks/_plan.feature.scss
+++ b/scss/blocks/_plan.feature.scss
@@ -1,3 +1,4 @@
-.plan-feature::after, .plan-feature::before{
-    display: none;
+.plan-feature::after,
+.plan-feature::before {
+  display: none;
 }
