--- a/scss/blocks/_about-mission.scss
+++ b/scss/blocks/_about-mission.scss
@@ -1,238 +1,237 @@
-.mission{
-    background-color: #F3F3E8;
-    margin: 20px;
-    position: relative;
+.mission {
+  background-color: #f3f3e8;
+  margin: 20px;
+  position: relative;
 
-    &_wrapper{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 150px 100px;
-    }
+  &_wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 150px 100px;
+  }
 
-    &_img{
-        width: 30%;
-        margin-left: 70px;
-    }
+  &_img {
+    width: 30%;
+    margin-left: 70px;
+  }
 
-    &_content-wrapper{
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-    }
+  &_content-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
 
-    &_title{
-        width: 100%;
-        font-weight: var(--font-weight-700);
-        font-size: 48px;
-        line-height: 56px;
-        font-variant: all-small-caps;
-        color: #000000;
-    }
+  &_title {
+    width: 100%;
+    font-weight: var(--font-weight-700);
+    font-size: 48px;
+    line-height: 56px;
+    font-variant: all-small-caps;
+    color: #000000;
+  }
 
-    &_desc{
-        width: 100%;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 30px;
-        color: var(--text-color-primary);
-        margin: 24px 0;
-    }
+  &_desc {
+    width: 100%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    color: var(--text-color-primary);
+    margin: 24px 0;
+  }
 }
 
-.mission::after{
-    content: "";
-    background: url(/img/leaves-left-1.png) no-repeat;
-    background-size: 100% 100%;
-    width: 231px;
-    height: 281px;
-    position: absolute;
-    left: 0;
-    top: 2%;
+.mission::after {
+  content: "";
+  background: url(/img/leaves-left-1.png) no-repeat;
+  background-size: 100% 100%;
+  width: 231px;
+  height: 281px;
+  position: absolute;
+  left: 0;
+  top: 2%;
 }
 
-@media only screen and (max-width: 1214px){
-    .mission{
-        &_img{
-            width: 33%;
-            margin-left: 55px;
-        }
-
-        &_title{
-            font-size: 45px;
-            line-height: 51px;
-        }
-    
-        &_desc{
-            font-size: 16px;
-            line-height: 27px;
-            margin: 21px 0;
-        } 
+@media only screen and (max-width: 1214px) {
+  .mission {
+    &_img {
+      width: 33%;
+      margin-left: 55px;
     }
 
-    .mission::after{
-        width: 201px;
-        height: 251px;
+    &_title {
+      font-size: 45px;
+      line-height: 51px;
     }
+
+    &_desc {
+      font-size: 16px;
+      line-height: 27px;
+      margin: 21px 0;
+    }
+  }
+
+  .mission::after {
+    width: 201px;
+    height: 251px;
+  }
 }
 
-@media only screen and (max-width: 1051px){
-    .mission{
-        &_wrapper{
-            padding: 120px 75px;
-        }
-
-        &_img{
-            width: 35%;
-            margin-left: 30px;
-        }
-
-        &_title{
-            font-size: 41px;
-            line-height: 47px;
-        }
-    
-        &_desc{
-            font-size: 15px;
-            line-height: 23px;
-            margin: 19px 0;
-        } 
+@media only screen and (max-width: 1051px) {
+  .mission {
+    &_wrapper {
+      padding: 120px 75px;
     }
 
-    .mission::after{
-        width: 171px;
-        height: 221px;
+    &_img {
+      width: 35%;
+      margin-left: 30px;
     }
+
+    &_title {
+      font-size: 41px;
+      line-height: 47px;
+    }
+
+    &_desc {
+      font-size: 15px;
+      line-height: 23px;
+      margin: 19px 0;
+    }
+  }
+
+  .mission::after {
+    width: 171px;
+    height: 221px;
+  }
 }
 
-@media only screen and (max-width: 957px){
-    .mission{
-        &_wrapper{
-            padding: 100px 60px;
-        }
-
-        &_img{
-            width: 37%;
-            margin-left: 0;
-        }
-
-        &_content-wrapper{
-            width: 55%;
-        }
-
-        &_title{
-            font-size: 37px;
-            line-height: 41px;
-        }
-    
-        &_desc{
-            font-size: 13px;
-            line-height: 20px;
-            margin: 17px 0;
-        } 
+@media only screen and (max-width: 957px) {
+  .mission {
+    &_wrapper {
+      padding: 100px 60px;
     }
 
-    .mission::after{
-        width: 141px;
-        height: 191px;
+    &_img {
+      width: 37%;
+      margin-left: 0;
     }
+
+    &_content-wrapper {
+      width: 55%;
+    }
+
+    &_title {
+      font-size: 37px;
+      line-height: 41px;
+    }
+
+    &_desc {
+      font-size: 13px;
+      line-height: 20px;
+      margin: 17px 0;
+    }
+  }
+
+  .mission::after {
+    width: 141px;
+    height: 191px;
+  }
 }
 
-@media only screen and (max-width: 801px){
-    .mission{
-        &_wrapper{
-            padding: 80px 50px;
-        }
-
-        &_title{
-            font-size: 33px;
-            line-height: 37px;
-        }
-    
-        &_desc{
-            font-size: 12px;
-            line-height: 18px;
-            margin: 15px 0;
-        } 
+@media only screen and (max-width: 801px) {
+  .mission {
+    &_wrapper {
+      padding: 80px 50px;
     }
 
-    .mission::after{
-        width: 111px;
-        height: 161px;
+    &_title {
+      font-size: 33px;
+      line-height: 37px;
     }
+
+    &_desc {
+      font-size: 12px;
+      line-height: 18px;
+      margin: 15px 0;
+    }
+  }
+
+  .mission::after {
+    width: 111px;
+    height: 161px;
+  }
 }
 
-@media only screen and (max-width: 713px){
-    .mission{
-        &_wrapper{
-            flex-direction: column;
-            padding: 50px 30px;
-        }
-
-        &_img{
-            width: 50%;
-            margin-left: 0;
-        }
-
-        &_content-wrapper{
-            width: 80%;
-            margin-top: 10px;
-        }
-
-        &_title{
-            text-align: center;
-            font-size: 33px;
-            line-height: 41px;
-        }
-    
-        &_desc{
-            text-align: center;
-            font-size: 13px;
-            line-height: 21px;
-            margin: 15px 0;
-        } 
+@media only screen and (max-width: 713px) {
+  .mission {
+    &_wrapper {
+      flex-direction: column;
+      padding: 50px 30px;
     }
 
-    .mission::after{
-        width: 111px;
-        height: 141px;
+    &_img {
+      width: 50%;
+      margin-left: 0;
     }
+
+    &_content-wrapper {
+      width: 80%;
+      margin-top: 10px;
+    }
+
+    &_title {
+      text-align: center;
+      font-size: 33px;
+      line-height: 41px;
+    }
+
+    &_desc {
+      text-align: center;
+      font-size: 13px;
+      line-height: 21px;
+      margin: 15px 0;
+    }
+  }
+
+  .mission::after {
+    width: 111px;
+    height: 141px;
+  }
 }
 
-@media only screen and (max-width: 503px){
-    .mission{
-        &_wrapper{
-            flex-direction: column;
-            padding: 30px 15px;
-        }
-
-        &_img{
-            width: 50%;
-            margin-left: 0;
-        }
-
-        &_content-wrapper{
-            width: 80%;
-            margin-top: 10px;
-        }
-
-        &_title{
-            text-align: center;
-            font-size: 25px;
-            line-height: 27px;
-        }
-    
-        &_desc{
-            text-align: center;
-            font-size: 9px;
-            line-height: 15px;
-            margin: 11px 0;
-        } 
+@media only screen and (max-width: 503px) {
+  .mission {
+    &_wrapper {
+      flex-direction: column;
+      padding: 30px 15px;
     }
 
-    .mission::after{
-        width: 71px;
-        height: 101px;
+    &_img {
+      width: 50%;
+      margin-left: 0;
     }
+
+    &_content-wrapper {
+      width: 80%;
+      margin-top: 10px;
+    }
+
+    &_title {
+      text-align: center;
+      font-size: 25px;
+      line-height: 27px;
+    }
+
+    &_desc {
+      text-align: center;
+      font-size: 9px;
+      line-height: 15px;
+      margin: 11px 0;
+    }
+  }
+
+  .mission::after {
+    width: 71px;
+    height: 101px;
+  }
 }
-
