--- a/scss/blocks/_about-promo.scss
+++ b/scss/blocks/_about-promo.scss
@@ -1,214 +1,208 @@
-.about__promo{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 490px;
-    &-info{
-        width: 50%;
-    }
-    &-title{
-        font-weight: var(--font-weight-700);
-        font-size: 50px;
-        line-height: 59px;
-        font-variant: all-small-caps;
-        color: #FFFFFF;
-        width: 50%;
-        margin-bottom: 24px;
-    }
-    &-description{
-        font-weight: var(--font-weight-400);
-        font-size: 18px;
-        line-height: 30px;
-        color: #FFFFFF;
-        mix-blend-mode: normal;
-        opacity: 0.8;
-        width: 89%;
-    }
-    &-img__box{
-        position: relative;
-        width: 40%;
-        margin-right: 30px;
-        height: 100%;
-    }
-    &-img{
-        position: absolute;
-        top: -17%;
-        left: 0;
-        width: 100%;
-    }
+.about__promo {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 490px;
+  &-info {
+    width: 50%;
+  }
+  &-title {
+    font-weight: var(--font-weight-700);
+    font-size: 50px;
+    line-height: 59px;
+    font-variant: all-small-caps;
+    color: #ffffff;
+    width: 50%;
+    margin-bottom: 24px;
+  }
+  &-description {
+    font-weight: var(--font-weight-400);
+    font-size: 18px;
+    line-height: 30px;
+    color: #ffffff;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    width: 89%;
+  }
+  &-img__box {
+    position: relative;
+    width: 40%;
+    margin-right: 30px;
+    height: 100%;
+  }
+  &-img {
+    position: absolute;
+    top: -17%;
+    left: 0;
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 1300px) {
-    .about__promo{
-        height: 450px;
-        &-img{
-            top: -16%;
-        }
-        &-title{
-            font-size: 45px;
-        }
-        &-description{
-            font-size: 17px;
-
-        }
+  .about__promo {
+    height: 450px;
+    &-img {
+      top: -16%;
     }
+    &-title {
+      font-size: 45px;
+    }
+    &-description {
+      font-size: 17px;
+    }
+  }
 }
 
 @media only screen and (max-width: 1220px) {
-    .about__promo{
-        height: 420px;
-        &-img{
-            top: -17%;
-        }
-        &-title{
-            font-size: 43px;
-        }
-        &-description{
-            font-size: 16px;
-
-        }
+  .about__promo {
+    height: 420px;
+    &-img {
+      top: -17%;
     }
+    &-title {
+      font-size: 43px;
+    }
+    &-description {
+      font-size: 16px;
+    }
+  }
 }
 @media only screen and (max-width: 1130px) {
-    .about__promo{
-        height: 400px;
-        &-img{
-            top: -13%;
-        }
-        &-title{
-            font-size: 40px;
-            margin-bottom: 15px;
-            line-height: 1.1;
-        }
-        &-description{
-            font-size: 14px;
-            line-height: 1.7;
-
-        }
+  .about__promo {
+    height: 400px;
+    &-img {
+      top: -13%;
     }
+    &-title {
+      font-size: 40px;
+      margin-bottom: 15px;
+      line-height: 1.1;
+    }
+    &-description {
+      font-size: 14px;
+      line-height: 1.7;
+    }
+  }
 }
 @media only screen and (max-width: 1000px) {
-    .about__promo{
-        height: 380px;
-        &-img{
-            top: -10%;
-        }
-        &-title{
-            font-size: 35px;
-        }
-        &-description{
-            font-size: 13px;
-
-        }
+  .about__promo {
+    height: 380px;
+    &-img {
+      top: -10%;
     }
+    &-title {
+      font-size: 35px;
+    }
+    &-description {
+      font-size: 13px;
+    }
+  }
 }
 @media only screen and (max-width: 900px) {
-    .about__promo{
-        height: 350px;
-        &-img{
-            top: -6%;
-        }
-        &-title{
-            font-size: 31px;
-        }
-        &-description{
-            font-size: 12px;
-
-        }
+  .about__promo {
+    height: 350px;
+    &-img {
+      top: -6%;
     }
+    &-title {
+      font-size: 31px;
+    }
+    &-description {
+      font-size: 12px;
+    }
+  }
 }
 
 @media only screen and (max-width: 785px) {
-    .about__promo{
-        margin-top: 30%;
-        flex-direction: column-reverse;
-        justify-content: space-around;
-        height: 490px;
-        &-info{
-            width: 80%;
-            text-align: center;
-            margin-bottom: 50px;
-        }
-
-        &-title{
-            width: 100%;
-            margin: auto;
-            font-size: 40px;
-            margin-bottom: 30px;
-        }
-        &-description{
-            width: 100%;
-            margin: auto;
-            font-size: 16px;
-
-        }
-        &-img__box{
-            width: 80%;
-        }
-        &-img{
-            top: -80%;
-            left: 18%;
-            width: 70%;
-            border-radius: 30px;
-        }
+  .about__promo {
+    margin-top: 30%;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    height: 490px;
+    &-info {
+      width: 80%;
+      text-align: center;
+      margin-bottom: 50px;
     }
+
+    &-title {
+      width: 100%;
+      margin: auto;
+      font-size: 40px;
+      margin-bottom: 30px;
+    }
+    &-description {
+      width: 100%;
+      margin: auto;
+      font-size: 16px;
+    }
+    &-img__box {
+      width: 80%;
+    }
+    &-img {
+      top: -80%;
+      left: 18%;
+      width: 70%;
+      border-radius: 30px;
+    }
+  }
 }
 
 @media only screen and (max-width: 660px) {
-    .about__promo{
-        margin-top: 10%;
-        &-title{
-            font-size: 35px;
-            margin-bottom: 20px;
-        }
-        &-description{
-            font-size: 13px;
+  .about__promo {
+    margin-top: 10%;
+    &-title {
+      font-size: 35px;
+      margin-bottom: 20px;
     }
-    &-img{
-        top: -25%;
+    &-description {
+      font-size: 13px;
     }
-}
+    &-img {
+      top: -25%;
+    }
+  }
 }
 @media only screen and (max-width: 569px) {
-    .about__promo{
-        margin-top: 180px;
-        &-title{
-            font-size: 32px;
-        }
-        &-img{
-            top: -55%;
-            left: 4%;
-            width: 100%;
-        }
-}
+  .about__promo {
+    margin-top: 180px;
+    &-title {
+      font-size: 32px;
+    }
+    &-img {
+      top: -55%;
+      left: 4%;
+      width: 100%;
+    }
+  }
 }
 
 @media only screen and (max-width: 535px) {
-.about__promo{
+  .about__promo {
     margin-top: 200px;
-    &-title{
-        font-size: 32px;
+    &-title {
+      font-size: 32px;
     }
-    &-img{
-        top: -80%;
-        left: 4%;
-        width: 100%;
+    &-img {
+      top: -80%;
+      left: 4%;
+      width: 100%;
     }
-}
+  }
 }
 @media only screen and (max-width: 535px) {
-.about__promo{
+  .about__promo {
     margin-top: 130px;
-    &-title{
-        font-size: 28px;
+    &-title {
+      font-size: 28px;
     }
-    &-description{
-        font-size: 12px;
+    &-description {
+      font-size: 12px;
     }
-    &-img{
-        top: -45%;
-        left: 4%;
-        width: 100%;
+    &-img {
+      top: -45%;
+      left: 4%;
+      width: 100%;
     }
-}
+  }
 }
