--- a/scss/blocks/_home-collection.scss
+++ b/scss/blocks/_home-collection.scss
@@ -1,520 +1,520 @@
-.collection{
-    background-color: #F3F3E8;
-    margin: 20px;
-    position: relative;
+.collection {
+  background-color: #f3f3e8;
+  margin: 20px;
+  position: relative;
 
-    &_title{
-        font-weight: var(--font-weight-700);
-        font-size: 50px;
-        line-height: 59px;
+  &_title {
+    font-weight: var(--font-weight-700);
+    font-size: 50px;
+    line-height: 59px;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #000000;
+    padding-top: 50px;
+  }
+
+  &_wrapper {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 70px 0;
+  }
+
+  &_item {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    &--img {
+      width: 30%;
+    }
+
+    &--wrapper_right {
+      width: 31%;
+      margin-right: 100px;
+    }
+
+    &--wrapper_left {
+      width: 31%;
+      margin-left: 130px;
+    }
+
+    &--title {
+      width: 100%;
+      font-weight: var(--font-weight-500);
+      font-size: 48px;
+      line-height: 56px;
+      font-variant: all-small-caps;
+      color: var(--text-color-primary);
+      margin: 15px 0;
+    }
+
+    &--desc {
+      width: 100%;
+      font-weight: var(--font-weight-400);
+      font-size: 22px;
+      line-height: 34px;
+      color: var(--text-color-primary);
+    }
+  }
+
+  &_item:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
+}
+
+.collection::after {
+  content: "";
+  background: url(/img/leaves-left-1.png) no-repeat;
+  background-size: 100% 100%;
+  width: 231px;
+  height: 281px;
+  position: absolute;
+  left: 0;
+  top: 2%;
+  transform: translateX(-20px);
+}
+
+.collection::before {
+  content: "";
+  background: url(/img/leaves-right-mix.png) no-repeat;
+  background-size: 100% 100%;
+  width: 199px;
+  height: 398px;
+  position: absolute;
+  right: 0;
+  top: 39%;
+  z-index: 10;
+  transform: translateX(20px);
+}
+
+.collection_item::before {
+  content: "";
+  background: url(/img/leave-left-2.png) no-repeat;
+  background-size: 100% 100%;
+  width: 130px;
+  height: 275px;
+  position: absolute;
+  right: 0;
+  top: 73%;
+  left: 0;
+  z-index: 10;
+  transform: translateX(-20px);
+}
+
+@media only screen and (max-width: 1215px) {
+  .collection::after {
+    width: 201px;
+    height: 251px;
+  }
+
+  .collection::before {
+    width: 169px;
+    height: 368px;
+  }
+
+  .collection_item::before {
+    width: 100px;
+    height: 245px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 47px;
+      line-height: 55px;
+      padding-top: 45px;
+    }
+
+    &_item {
+      &--title {
+        font-size: 45px;
+        line-height: 53px;
+        margin: 13px 0;
+      }
+
+      &--desc {
+        font-size: 19px;
+        line-height: 31px;
+      }
+
+      &--img {
+        width: 29%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .collection::after {
+    width: 181px;
+    height: 231px;
+  }
+
+  .collection::before {
+    width: 139px;
+    height: 338px;
+  }
+
+  .collection_item::before {
+    width: 70px;
+    height: 215px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 43px;
+      line-height: 50px;
+      padding-top: 40px;
+    }
+
+    &_item {
+      &--wrapper_right {
+        width: 31%;
+        margin-right: 100px;
+      }
+
+      &--wrapper_left {
+        width: 31%;
+        margin-left: 90px;
+      }
+
+      &--title {
+        font-size: 41px;
+        line-height: 39px;
+        margin: 11px 0;
+      }
+
+      &--desc {
+        font-size: 17px;
+        line-height: 29px;
+      }
+
+      &--img {
+        width: 28%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .collection::after {
+    width: 151px;
+    height: 201px;
+  }
+
+  .collection::before {
+    width: 109px;
+    height: 308px;
+  }
+
+  .collection_item::before {
+    width: 60px;
+    height: 185px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 39px;
+      line-height: 45px;
+      padding-top: 35px;
+    }
+
+    &_item {
+      &--wrapper_right {
+        width: 31%;
+        margin-right: 75px;
+      }
+
+      &--wrapper_left {
+        width: 31%;
+        margin-left: 75px;
+      }
+
+      &--title {
+        font-size: 39px;
+        line-height: 37px;
+        margin: 9px 0;
+      }
+
+      &--desc {
+        font-size: 15px;
+        line-height: 27px;
+      }
+
+      &--img {
+        width: 27%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .collection::after {
+    width: 121px;
+    height: 171px;
+  }
+
+  .collection::before {
+    width: 79px;
+    height: 278px;
+  }
+
+  .collection_item::before {
+    width: 50px;
+    height: 155px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 35px;
+      line-height: 41px;
+      padding-top: 31px;
+    }
+
+    &_item {
+      &--wrapper_right {
+        width: 31%;
+        margin-right: 70px;
+      }
+
+      &--wrapper_left {
+        width: 31%;
+        margin-left: 55px;
+      }
+
+      &--title {
+        font-size: 33px;
+        line-height: 33px;
+        margin: 7px 0;
+      }
+
+      &--desc {
+        font-size: 13px;
+        line-height: 23px;
+      }
+
+      &--img {
+        width: 26%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  .collection::after {
+    width: 91px;
+    height: 141px;
+  }
+
+  .collection::before {
+    width: 69px;
+    height: 248px;
+  }
+
+  .collection_item::before {
+    width: 50px;
+    height: 125px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 35px;
+      line-height: 41px;
+      padding-top: 31px;
+    }
+
+    &_wrapper {
+      width: 80%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+      padding: 30px 0;
+    }
+
+    &_item {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      width: 50%;
+      height: 100%;
+      margin-bottom: 20px;
+
+      &--img {
+        width: 85%;
+        height: 70%;
+        margin: 0;
+      }
+
+      &--wrapper_right {
+        width: 85%;
+        height: 30%;
+        margin: 0;
+      }
+
+      &--wrapper_left {
+        width: 85%;
+        height: 30%;
+        margin: 0;
+      }
+
+      &--title {
         text-align: center;
-        font-variant: all-small-caps;
-        color: #000000;
-        padding-top: 50px;
+        font-size: 33px;
+        line-height: 33px;
+        margin: 7px 0;
+      }
+
+      &--desc {
+        text-align: center;
+        font-size: 13px;
+        line-height: 23px;
+      }
     }
 
-    &_wrapper{
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 70px 0;
+    &_item:nth-child(2n) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
-
-    &_item{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-
-        &--img{
-            width: 30%;
-        }
-
-        &--wrapper_right{
-            width: 31%;
-            margin-right: 100px;
-        }
-
-        &--wrapper_left{
-            width: 31%;
-            margin-left: 130px;
-        }
-
-        &--title{
-            width: 100%;
-            font-weight: var(--font-weight-500);
-            font-size: 48px;
-            line-height: 56px;
-            font-variant: all-small-caps;
-            color: var(--text-color-primary);
-            margin: 15px 0;
-        }
-
-        &--desc{
-            width: 100%;
-            font-weight: var(--font-weight-400);
-            font-size: 22px;
-            line-height: 34px;
-            color: var(--text-color-primary);
-        }
-    }
-
-    &_item:nth-child(2n){
-        flex-direction: row-reverse;
-    }
+  }
 }
 
-.collection::after{
-    content: "";
-    background: url(/img/leaves-left-1.png) no-repeat;
-    background-size: 100% 100%;
-    width: 231px;
-    height: 281px;
-    position: absolute;
-    left: 0;
-    top: 2%;
-    transform: translateX(-20px);
+@media only screen and (max-width: 631px) {
+  .collection::after {
+    width: 71px;
+    height: 121px;
+  }
+
+  .collection::before {
+    width: 59px;
+    height: 208px;
+  }
+
+  .collection_item::before {
+    width: 45px;
+    height: 105px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 31px;
+      line-height: 39px;
+      padding-top: 27px;
+    }
+
+    &_wrapper {
+      padding: 20px 0;
+    }
+
+    &_item {
+      margin-bottom: 10px;
+
+      &--title {
+        font-size: 27px;
+        line-height: 33px;
+      }
+
+      &--desc {
+        font-size: 12px;
+        line-height: 21px;
+      }
+    }
+  }
 }
 
-.collection::before{
-    content: "";
-    background: url(/img/leaves-right-mix.png) no-repeat;
-    background-size: 100% 100%;
-    width: 199px;
-    height: 398px;
-    position: absolute;
-    right: 0;
-    top: 39%;
-    z-index: 10;
-    transform: translateX(20px);
+@media only screen and (max-width: 600px) {
+  .collection::after {
+    width: 71px;
+    height: 121px;
+  }
+
+  .collection::before {
+    width: 59px;
+    height: 208px;
+  }
+
+  .collection_item::before {
+    width: 45px;
+    height: 105px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 35px;
+      line-height: 41px;
+      padding-top: 30px;
+    }
+
+    &_wrapper {
+      padding: 20px 0;
+    }
+
+    &_item {
+      width: 100%;
+
+      &--img {
+        width: 75%;
+      }
+
+      &--wrapper_right {
+        width: 75%;
+      }
+
+      &--wrapper_left {
+        width: 75%;
+      }
+
+      &--title {
+        font-size: 33px;
+        line-height: 39px;
+      }
+
+      &--desc {
+        font-size: 15px;
+        line-height: 23px;
+      }
+    }
+  }
 }
 
-.collection_item::before{
-    content: "";
-    background: url(/img/leave-left-2.png) no-repeat;
-    background-size: 100% 100%;
-    width: 130px;
-    height: 275px;
-    position: absolute;
-    right: 0;
-    top: 73%;
-    left: 0;
-    z-index: 10;
-    transform: translateX(-20px);
-}
+@media only screen and (max-width: 500px) {
+  .collection::after {
+    width: 51px;
+    height: 101px;
+  }
 
-@media only screen and (max-width: 1215px){
-    .collection::after{
-        width: 201px;
-        height: 251px;
-    }
-    
-    .collection::before{
-        width: 169px;
-        height: 368px;
-    }
-    
-    .collection_item::before{
-        width: 100px;
-        height: 245px;
+  .collection::before {
+    width: 50px;
+    height: 158px;
+  }
+
+  .collection_item::before {
+    width: 40px;
+    height: 75px;
+  }
+
+  .collection {
+    &_title {
+      font-size: 29px;
+      line-height: 33px;
+      padding-top: 17px;
     }
 
-    .collection{
-        &_title{
-            font-size: 47px;
-            line-height: 55px;
-            padding-top: 45px;
-        }
+    &_item {
+      &--title {
+        font-size: 25px;
+        line-height: 33px;
+      }
 
-        &_item{
-            &--title{
-                font-size: 45px;
-                line-height: 53px;
-                margin: 13px 0;
-            }
-
-            &--desc{
-                font-size: 19px;
-                line-height: 31px;
-            }
-
-            &--img{
-                width: 29%;
-            }
-        }
+      &--desc {
+        font-size: 12px;
+        line-height: 17px;
+      }
     }
-}
-
-@media only screen and (max-width: 1100px){
-    .collection::after{
-        width: 181px;
-        height: 231px;
-    }
-    
-    .collection::before{
-        width: 139px;
-        height: 338px;
-    }
-    
-    .collection_item::before{
-        width: 70px;
-        height: 215px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 43px;
-            line-height: 50px;
-            padding-top: 40px;
-        }
-
-        &_item{
-            &--wrapper_right{
-                width: 31%;
-                margin-right: 100px;
-            }
-            
-            &--wrapper_left{
-                width: 31%;
-                margin-left: 90px;
-            }
-
-            &--title{
-                font-size: 41px;
-                line-height: 39px;
-                margin: 11px 0;
-            }
-
-            &--desc{
-                font-size: 17px;
-                line-height: 29px;
-            }
-
-            &--img{
-                width: 28%;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 1000px){
-    .collection::after{
-        width: 151px;
-        height: 201px;
-    }
-    
-    .collection::before{
-        width: 109px;
-        height: 308px;
-    }
-    
-    .collection_item::before{
-        width: 60px;
-        height: 185px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 39px;
-            line-height: 45px;
-            padding-top: 35px;
-        }
-
-        &_item{
-            &--wrapper_right{
-                width: 31%;
-                margin-right: 75px;
-            }
-            
-            &--wrapper_left{
-                width: 31%;
-                margin-left: 75px;
-            }
-
-            &--title{
-                font-size: 39px;
-                line-height: 37px;
-                margin: 9px 0;
-            }
-
-            &--desc{
-                font-size: 15px;
-                line-height: 27px;
-            }
-
-            &--img{
-                width: 27%;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 880px){
-    .collection::after{
-        width: 121px;
-        height: 171px;
-    }
-    
-    .collection::before{
-        width: 79px;
-        height: 278px;
-    }
-    
-    .collection_item::before{
-        width: 50px;
-        height: 155px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 35px;
-            line-height: 41px;
-            padding-top: 31px;
-        }
-
-        &_item{
-            &--wrapper_right{
-                width: 31%;
-                margin-right: 70px;
-            }
-            
-            &--wrapper_left{
-                width: 31%;
-                margin-left: 55px;
-            }
-
-            &--title{
-                font-size: 33px;
-                line-height: 33px;
-                margin: 7px 0;
-            }
-
-            &--desc{
-                font-size: 13px;
-                line-height: 23px;
-            }
-
-            &--img{
-                width: 26%;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 780px){
-    .collection::after{
-        width: 91px;
-        height: 141px;
-    }
-    
-    .collection::before{
-        width: 69px;
-        height: 248px;
-    }
-    
-    .collection_item::before{
-        width: 50px;
-        height: 125px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 35px;
-            line-height: 41px;
-            padding-top: 31px;
-        }
-
-        &_wrapper{
-            width: 80%;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-items: center;
-            padding: 30px 0;
-        }
-
-        &_item{
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            width: 50%;
-            height: 100%;
-            margin-bottom: 20px;
-
-            &--img{
-                width: 85%;
-                height: 70%;
-                margin: 0;
-            }
-
-            &--wrapper_right{
-                width: 85%;
-                height: 30%;
-                margin: 0;
-            }
-            
-            &--wrapper_left{
-                width: 85%;
-                height: 30%;
-                margin: 0;
-            }
-
-            &--title{
-                text-align: center;
-                font-size: 33px;
-                line-height: 33px;
-                margin: 7px 0;
-            }
-
-            &--desc{
-                text-align: center;
-                font-size: 13px;
-                line-height: 23px;
-            }
-        }
-
-        &_item:nth-child(2n){
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-}
-
-@media only screen and (max-width: 631px){
-    .collection::after{
-        width: 71px;
-        height: 121px;
-    }
-    
-    .collection::before{
-        width: 59px;
-        height: 208px;
-    }
-    
-    .collection_item::before{
-        width: 45px;
-        height: 105px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 31px;
-            line-height: 39px;
-            padding-top: 27px;
-        }
-
-        &_wrapper{
-            padding: 20px 0;
-        }
-
-        &_item{
-            margin-bottom: 10px;
-
-            &--title{
-                font-size: 27px;
-                line-height: 33px;
-            }
-
-            &--desc{
-                font-size: 12px;
-                line-height: 21px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 600px){
-    .collection::after{
-        width: 71px;
-        height: 121px;
-    }
-    
-    .collection::before{
-        width: 59px;
-        height: 208px;
-    }
-    
-    .collection_item::before{
-        width: 45px;
-        height: 105px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 35px;
-            line-height: 41px;
-            padding-top: 30px;
-        }
-
-        &_wrapper{
-            padding: 20px 0;
-        }
-
-        &_item{
-            width: 100%;
-            
-            &--img{
-                width: 75%;
-            }
-
-            &--wrapper_right{
-                width: 75%;
-            }
-
-            &--wrapper_left{
-                width: 75%;
-            }
-
-            &--title{
-                font-size: 33px;
-                line-height: 39px;
-            }
-
-            &--desc{
-                font-size: 15px;
-                line-height: 23px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 500px){
-    .collection::after{
-        width: 51px;
-        height: 101px;
-    }
-    
-    .collection::before{
-        width: 50px;
-        height: 158px;
-    }
-    
-    .collection_item::before{
-        width: 40px;
-        height: 75px;
-    }
-
-    .collection{
-        &_title{
-            font-size: 29px;
-            line-height: 33px;
-            padding-top: 17px;
-        }
-
-        &_item{
-            &--title{
-                font-size: 25px;
-                line-height: 33px;
-            }
-
-            &--desc{
-                font-size: 12px;
-                line-height: 17px;
-            }
-        }
-    }
+  }
 }
