--- a/scss/blocks/_home-feature.scss
+++ b/scss/blocks/_home-feature.scss
@@ -1,310 +1,300 @@
-.feature{
-    position: relative;
+.feature {
+  position: relative;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+
+  &-title {
+    margin-top: 0;
+    margin-bottom: 140px !important;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 59px;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
+  &-card__box {
     padding: 50px 0;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    display: flex;
+  }
+  &-card {
+    position: relative;
+    width: 33%;
+    height: 420px;
+    background: #f8f8f2;
+    padding: 20px;
 
-    &-title{
-        margin-top: 0;
-        margin-bottom: 140px !important;
-        font-weight: 700;
-        font-size: 50px;
-        line-height: 59px;
-        text-align: center;
-        color: #FFFFFF;
-        text-transform: uppercase;
+    &__title {
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 40px;
+      width: 60%;
+      margin: 8px 0;
+      font-variant: all-small-caps;
 
+      color: var(--text-color-primary);
     }
-    &-card__box{
-        padding: 50px 0;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        display: flex;
-
+    &__description {
+      margin: 0;
+      width: 89%;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+      color: var(--text-color-primary);
     }
-    &-card{
-        position: relative;
-        width: 33%;
-        height: 420px;
-        background: #F8F8F2;
-        padding: 20px;
+    &__number {
+      font-family: "Roboto";
+      font-size: 70px;
+      line-height: 75px;
+      font-variant: all-small-caps;
 
-        &__title{
-            font-weight: 500;
-            font-size: 40px;
-            line-height: 40px;
-            width: 60%;
-            margin: 8px 0;
-            font-variant: all-small-caps;
+      color: var(--text-color-primary);
 
-            color: var(--text-color-primary);
-        }
-        &__description{
-            margin: 0;
-            width: 89%;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 28px;
-            color: var(--text-color-primary);
-        }
-        &__number{
-            font-family: 'Roboto';
-            font-size: 70px;
-            line-height: 75px;
-            font-variant: all-small-caps;
-
-            color: var(--text-color-primary);
-
-            opacity: 0.7;
-            margin: 0;
-            width: fit-content;
-            margin-left: auto;
-            margin-bottom: 12%;
-        }
+      opacity: 0.7;
+      margin: 0;
+      width: fit-content;
+      margin-left: auto;
+      margin-bottom: 12%;
     }
-    &-card::before{
-        content: "";
-        position: absolute;
-        top: -20%;
-        left: 0;
-        width: 60px;
-        height: 60px;
-        background-color: #F8F8F2;
-        border: 4px solid #C99B67;
-    }
-    &-button{
-        background: #C99B67;
-        margin: 0 auto;
-        border: 2px solid transparent;
-    }
-    &-button:hover{
-        color: #C99B67;
-        background-color: #fff;
-        border: 2px solid #C99B67;
-    }
-    &-border{
-        width: 70%;
-        display: block;
-        border-top: 3px dashed #C99B67;
-        border-width: 5px;
-        
-    }
-}
-
-.feature::after{
+  }
+  &-card::before {
     content: "";
-    background: url(/img/coffee-first-sticker.png) no-repeat;
-    background-size: 100% 100%;
     position: absolute;
-    top: 7%;
-    right: 5%;
-    width: 230px;
-    height: 200px;
+    top: -20%;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    background-color: #f8f8f2;
+    border: 4px solid #c99b67;
+  }
+  &-button {
+    background: #c99b67;
+    margin: 0 auto;
+    border: 2px solid transparent;
+  }
+  &-button:hover {
+    color: #c99b67;
+    background-color: #fff;
+    border: 2px solid #c99b67;
+  }
+  &-border {
+    width: 70%;
+    display: block;
+    border-top: 3px dashed #c99b67;
+    border-width: 5px;
+  }
 }
 
+.feature::after {
+  content: "";
+  background: url(/img/coffee-first-sticker.png) no-repeat;
+  background-size: 100% 100%;
+  position: absolute;
+  top: 7%;
+  right: 5%;
+  width: 230px;
+  height: 200px;
+}
 
 @media only screen and (max-width: 1350px) {
-    .feature{
-        &-card__box{
-            justify-content: space-around;
-        }
-        &-card{
-            width: 31%;
-        }
+  .feature {
+    &-card__box {
+      justify-content: space-around;
     }
+    &-card {
+      width: 31%;
+    }
+  }
 }
 @media only screen and (max-width: 1245px) {
-    .feature{
-        &-card__title{
-            font-size: 35px;
-        }
-        &-title{
-        font-size: 45px;
-        }
-        &::after{
-        width: 200px;
-        height: 180px;
-        }
+  .feature {
+    &-card__title {
+      font-size: 35px;
     }
+    &-title {
+      font-size: 45px;
+    }
+    &::after {
+      width: 200px;
+      height: 180px;
+    }
+  }
 }
 @media only screen and (max-width: 1122px) {
-    .feature{
-        &-card__title{
-            font-size: 30px;
-        }
-        &-card__description{
-            font-size: 15px;
-        }
-        &-title{
-            font-size: 40px;
-        }
-        &::after{
-            width: 190px;
-            height: 170px;
-        }
-
+  .feature {
+    &-card__title {
+      font-size: 30px;
     }
+    &-card__description {
+      font-size: 15px;
+    }
+    &-title {
+      font-size: 40px;
+    }
+    &::after {
+      width: 190px;
+      height: 170px;
+    }
+  }
 }
 @media only screen and (max-width: 970px) {
-    .feature{
-        &-card__title{
-            text-align: center;
-            line-height: 1.3;
-        }
-        &-card__description{
-            text-align: center;
-            line-height: 1.6;
-        }
-        &-title{
-            font-size: 40px;
-        }
-        &::after{
-            width: 180px;
-            height: 160px;
-        }
-
+  .feature {
+    &-card__title {
+      text-align: center;
+      line-height: 1.3;
     }
+    &-card__description {
+      text-align: center;
+      line-height: 1.6;
+    }
+    &-title {
+      font-size: 40px;
+    }
+    &::after {
+      width: 180px;
+      height: 160px;
+    }
+  }
 }
 @media only screen and (max-width: 970px) {
-    .feature{
-        &::after{
-            width: 180px;
-            height: 160px;
-        }
-        &-card__box{
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
-            height: 1350px;
-    
-        }
-        &-card{
-            position: relative;
-            width: 70%;
-            height: 30%;
-            padding: 35px;
-        }
-        &-card::before{
-            display: none;
-        }
-        &-border{
-            display: none;
-        }
-        &-card__title{
-            text-align: center;
-            line-height: 1.3;
-            font-size: 40px;
-            text-align: left;
-        }
-        &-card__description{
-            text-align: center;
-            line-height: 1.6;
-            font-size: 18px;
-            text-align: left;
-            width: 85%;
-        }
-        &-card__number{
-            margin-bottom: 7%;
-            font-size: 80px;
-        }
-        &-title{
-            font-size: 40px;
-        }
-        &::after{
-            width: 180px;
-            height: 160px;
-        }
+  .feature {
+    &::after {
+      width: 180px;
+      height: 160px;
     }
+    &-card__box {
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      height: 1350px;
+    }
+    &-card {
+      position: relative;
+      width: 70%;
+      height: 30%;
+      padding: 35px;
+    }
+    &-card::before {
+      display: none;
+    }
+    &-border {
+      display: none;
+    }
+    &-card__title {
+      text-align: center;
+      line-height: 1.3;
+      font-size: 40px;
+      text-align: left;
+    }
+    &-card__description {
+      text-align: center;
+      line-height: 1.6;
+      font-size: 18px;
+      text-align: left;
+      width: 85%;
+    }
+    &-card__number {
+      margin-bottom: 7%;
+      font-size: 80px;
+    }
+    &-title {
+      font-size: 40px;
+    }
+    &::after {
+      width: 180px;
+      height: 160px;
+    }
+  }
 }
 
 @media only screen and (max-width: 900px) {
-    .feature{
-        &-title{
-            font-size: 40px;
-        }
-        &-card__title{
-            line-height: 1.2;
-            font-size: 40px;
-        }
-        &-card__description{
-            line-height: 1.4;
-            font-size: 17px;
-
-        }
-        &-card__number{
-            font-size: 70px;
-        }
+  .feature {
+    &-title {
+      font-size: 40px;
     }
+    &-card__title {
+      line-height: 1.2;
+      font-size: 40px;
+    }
+    &-card__description {
+      line-height: 1.4;
+      font-size: 17px;
+    }
+    &-card__number {
+      font-size: 70px;
+    }
+  }
 }
 
 @media only screen and (max-width: 780px) {
-    .feature{
-        &-title{
-            font-size: 40px;
-            margin-bottom: 30px !important;
-        }
-        &-card__title{
-            line-height: 1.1;
-            font-size: 30px;
-        }
-        &-card__description{
-            line-height: 1.5;
-            font-size: 15px;
-
-        }
-        &-card__number{
-            font-size: 70px;
-        }
-        &::after{
-        display: none;
-        }
+  .feature {
+    &-title {
+      font-size: 40px;
+      margin-bottom: 30px !important;
     }
+    &-card__title {
+      line-height: 1.1;
+      font-size: 30px;
+    }
+    &-card__description {
+      line-height: 1.5;
+      font-size: 15px;
+    }
+    &-card__number {
+      font-size: 70px;
+    }
+    &::after {
+      display: none;
+    }
+  }
 }
 @media only screen and (max-width: 600px) {
-    .feature{
-        &-title{
-            font-size: 33px;
-            margin-bottom: 0px !important;
-        }
-        &-card__title{
-            line-height: 1.1;
-            font-size: 27px;
-        }
-        &-card__description{
-            line-height: 1.5;
-            font-size: 13px;
-
-        }
-        &-card__number{
-            font-size: 60px;
-        }
+  .feature {
+    &-title {
+      font-size: 33px;
+      margin-bottom: 0px !important;
     }
+    &-card__title {
+      line-height: 1.1;
+      font-size: 27px;
+    }
+    &-card__description {
+      line-height: 1.5;
+      font-size: 13px;
+    }
+    &-card__number {
+      font-size: 60px;
+    }
+  }
 }
 @media only screen and (max-width: 500px) {
-    .feature{
-        &-title{
-            font-size: 30px;
-        }
-        &-card__title{
-            width: 100%;
-        }
-        &-card__description{
-            width: 100%;
-        }
-        &-card__number{
-            font-size: 50px;
-        }
+  .feature {
+    &-title {
+      font-size: 30px;
     }
+    &-card__title {
+      width: 100%;
+    }
+    &-card__description {
+      width: 100%;
+    }
+    &-card__number {
+      font-size: 50px;
+    }
+  }
 }
 @media only screen and (max-width: 420px) {
-    .feature{
-        &-title{
-            font-size: 27px;
-        }
-        &-card__title{
-            width: 100%;
-            font-size: 25px;
-        }
+  .feature {
+    &-title {
+      font-size: 27px;
     }
+    &-card__title {
+      width: 100%;
+      font-size: 25px;
+    }
+  }
 }
