--- a/scss/blocks/_home-promo.scss
+++ b/scss/blocks/_home-promo.scss
@@ -1,297 +1,293 @@
-.promo{
+.promo {
+  display: flex;
+  flex-direction: column;
+  height: 730px;
+  position: relative;
+  margin-bottom: 300px;
+
+  &-title {
+    font-weight: var(--font-weight-700);
+    font-size: 50px;
+    line-height: 59px;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #ffffff;
+    margin-bottom: 15px;
+    margin-top: 50px;
+  }
+  &-description {
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+    margin: 0 auto;
+    color: #ffffff;
+    font-weight: 400;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    width: 543px;
+  }
+  &-card__box {
     display: flex;
-    flex-direction: column;
-    height: 730px;
-    position: relative;
-    margin-bottom: 300px;
-
-    &-title{
-        font-weight: var(--font-weight-700);
-        font-size: 50px;
-        line-height: 59px;
-        text-align: center;
-        font-variant: all-small-caps;
-        color: #FFFFFF;
-        margin-bottom: 15px;
-        margin-top: 50px;
-    }
-    &-description{
-        font-size: 16px;
-        line-height: 28px;
-        text-align: center;
-        margin: 0 auto;
-        color: #FFFFFF;
-        font-weight: 400;
-        mix-blend-mode: normal;
-        opacity: 0.8;
-        width: 543px;
-    }
-    &-card__box{
-        display: flex;
-        justify-content: space-between;
-        position: absolute;
-        top: 40%;
-    }
-
-    &-card{
-        width: 32%;
-
-        &__img{
-            width: 100%;
-        }
-
-        &__title{
-            font-weight: 500;
-            font-size: 30px;
-            line-height: 35px;
-            font-variant: all-small-caps;
-            color: var(--text-color-primary);
-            margin-top: 20px;
-        }
-        &__description{
-            width: 85%;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 28px;
-            color: var(--text-color-primary);
-            margin-top: 10px;
-        }
-    }
-
-
-}
-
-.promo::before{
-    content: "";
-    background: url(/img/home-promo-sticker.png) no-repeat;
-    background-size: 100% 100%;
+    justify-content: space-between;
     position: absolute;
-    z-index: 99;
-    top: 32.8%;
-    left: -3%;
-    width: 148px;
-    height: 155px;
+    top: 40%;
+  }
+
+  &-card {
+    width: 32%;
+
+    &__img {
+      width: 100%;
+    }
+
+    &__title {
+      font-weight: 500;
+      font-size: 30px;
+      line-height: 35px;
+      font-variant: all-small-caps;
+      color: var(--text-color-primary);
+      margin-top: 20px;
+    }
+    &__description {
+      width: 85%;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+      color: var(--text-color-primary);
+      margin-top: 10px;
+    }
+  }
 }
 
-@media only screen and (max-width: 1223px){
-    .promo{
-        height: 600px;
-        margin-bottom: 250px;
-
-        &-description{
-            font-size: 16px;
-        }
-        &-card__box{
-            display: flex;
-            justify-content: space-around;
-        }
-
-        &-card{
-            width: 32%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            &__img{
-                width: 95%;
-            }
-            &__description{
-                font-size: 16px;
-                text-align: center;
-            }
-        }
-        &-card__info{
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-        }
-        &::before{
-            top: 32.8%;
-            width: 138px;
-            height: 145px;
-        }
-    }
+.promo::before {
+  content: "";
+  background: url(/img/home-promo-sticker.png) no-repeat;
+  background-size: 100% 100%;
+  position: absolute;
+  z-index: 99;
+  top: 32.8%;
+  left: -3%;
+  width: 148px;
+  height: 155px;
 }
 
-@media only screen and (max-width: 1066px){
-    .promo{
-        height: 550px;
-        margin-bottom: 270px;
-        &-title{
-            font-size: 40px;
-            margin-bottom: 5px;
-        }
-        &-description{
-            font-size: 14px;
-        }
-        &-card__box{
-            top: 45%;
-        }
-        &-card{
-            &__description{
-                font-size: 15px;
-                margin-top: 7px;
-            }
-            &__title{
-                font-size: 25px;
+@media only screen and (max-width: 1223px) {
+  .promo {
+    height: 600px;
+    margin-bottom: 250px;
 
-            }
-        }
-        &::before{
-            top: 37%;
-            width: 123px;
-            height: 130px;
-        }
+    &-description {
+      font-size: 16px;
     }
-    
-}
-@media only screen and (max-width: 900px){
-    .promo{
-        height: 520px;
-        margin-bottom: 200px;
-        &-title{
-            font-size: 35px;
-        }
-        &-description{
-            line-height: 1.6;
-        }
-        &-card__box{
-            top: 50%;
-        }
-        &-card{
-            &__description{
-                font-size: 13px;
-                line-height: 1.7;
-                margin-top: 5px;
-            }
-            &__title{
-                font-size: 23px;
-            }
-        }
-        &::before{
-            top: 42%;
-            width: 113px;
-            height: 120px;
-        }
+    &-card__box {
+      display: flex;
+      justify-content: space-around;
     }
-}
-@media only screen and (max-width: 780px){
-    .promo{
-        height: fit-content;
-        margin: 0;
-        &-card__box{
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            justify-content: space-between;
-            position: static;
-            height: fit-content;
-        }
-        &-card{
-            width: 100%;
-            flex-direction: row;
-            justify-content: space-evenly;
-            margin: 15px 0;
-            &__img{
-                width: 40%;
-                border-radius: 20px;
-            }
-            &__info{
-                width: 50%;
-            }
-    
-            &__title{
-                color: var(--text-color-white);
-                font-size: 27px;
-                margin-bottom: 10px;
-                line-height: 1.2;
-                width: 100%;
-            }
-            &__description{
-                text-align: left;
-                width: 100%;
-                font-size: 15px;
-                color: var(--text-color-white);
-            }
-            &:first-child{
-                margin-top: 50px;
-            }
-        }
-    
-    &::before{
-        display: none;
+
+    &-card {
+      width: 32%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__img {
+        width: 95%;
+      }
+      &__description {
+        font-size: 16px;
+        text-align: center;
+      }
     }
+    &-card__info {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
     }
+    &::before {
+      top: 32.8%;
+      width: 138px;
+      height: 145px;
+    }
+  }
 }
 
-@media only screen and (max-width: 690px){
-    .promo{
-        &-title{
-            font-size: 30px;
-        }
-        &-description{
-            line-height: 1.6;
-            width: 80%;
-        }
+@media only screen and (max-width: 1066px) {
+  .promo {
+    height: 550px;
+    margin-bottom: 270px;
+    &-title {
+      font-size: 40px;
+      margin-bottom: 5px;
     }
+    &-description {
+      font-size: 14px;
+    }
+    &-card__box {
+      top: 45%;
+    }
+    &-card {
+      &__description {
+        font-size: 15px;
+        margin-top: 7px;
+      }
+      &__title {
+        font-size: 25px;
+      }
+    }
+    &::before {
+      top: 37%;
+      width: 123px;
+      height: 130px;
+    }
+  }
+}
+@media only screen and (max-width: 900px) {
+  .promo {
+    height: 520px;
+    margin-bottom: 200px;
+    &-title {
+      font-size: 35px;
+    }
+    &-description {
+      line-height: 1.6;
+    }
+    &-card__box {
+      top: 50%;
+    }
+    &-card {
+      &__description {
+        font-size: 13px;
+        line-height: 1.7;
+        margin-top: 5px;
+      }
+      &__title {
+        font-size: 23px;
+      }
+    }
+    &::before {
+      top: 42%;
+      width: 113px;
+      height: 120px;
+    }
+  }
+}
+@media only screen and (max-width: 780px) {
+  .promo {
+    height: fit-content;
+    margin: 0;
+    &-card__box {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: space-between;
+      position: static;
+      height: fit-content;
+    }
+    &-card {
+      width: 100%;
+      flex-direction: row;
+      justify-content: space-evenly;
+      margin: 15px 0;
+      &__img {
+        width: 40%;
+        border-radius: 20px;
+      }
+      &__info {
+        width: 50%;
+      }
+
+      &__title {
+        color: var(--text-color-white);
+        font-size: 27px;
+        margin-bottom: 10px;
+        line-height: 1.2;
+        width: 100%;
+      }
+      &__description {
+        text-align: left;
+        width: 100%;
+        font-size: 15px;
+        color: var(--text-color-white);
+      }
+      &:first-child {
+        margin-top: 50px;
+      }
+    }
+
+    &::before {
+      display: none;
+    }
+  }
 }
 
-@media only screen and (max-width: 600px){
-    .promo{
-        &-card{
-            margin: 15px 0;
-            &__title{
-                font-size: 24px;
-                margin-bottom: 7px;
-            }
-            &__description{
-                font-size: 12px;
-            }
-        }
+@media only screen and (max-width: 690px) {
+  .promo {
+    &-title {
+      font-size: 30px;
     }
+    &-description {
+      line-height: 1.6;
+      width: 80%;
+    }
+  }
 }
 
-@media only screen and (max-width: 500px){
-    .promo{
-        &-card{
-            flex-direction: column;
-            &__info{
-                width: 80%;
-            }
-            &__title{
-                font-size: 27px;
-                margin-bottom: 7px;
-            }
-            &__description{
-                font-size: 14px;
-            }
-            &__img{
-                width: 80%;
-            }
-        }
+@media only screen and (max-width: 600px) {
+  .promo {
+    &-card {
+      margin: 15px 0;
+      &__title {
+        font-size: 24px;
+        margin-bottom: 7px;
+      }
+      &__description {
+        font-size: 12px;
+      }
     }
+  }
 }
-@media only screen and (max-width: 430px){
-    .promo{
-        &-title{
-            font-size: 28px;
-        }
-        &-description{
-            font-size: 13px;
-            line-height: 1.3;
-        }
-        &-card{
-            &__title{
-                font-size: 24px;
-                margin-bottom: 2px;
-            }
-            &__description{
-                font-size: 12px;
-            }
-            &__img{
-                width: 80%;
-                border-radius: 0;
-            }
-        }
+
+@media only screen and (max-width: 500px) {
+  .promo {
+    &-card {
+      flex-direction: column;
+      &__info {
+        width: 80%;
+      }
+      &__title {
+        font-size: 27px;
+        margin-bottom: 7px;
+      }
+      &__description {
+        font-size: 14px;
+      }
+      &__img {
+        width: 80%;
+      }
     }
+  }
+}
+@media only screen and (max-width: 430px) {
+  .promo {
+    &-title {
+      font-size: 28px;
+    }
+    &-description {
+      font-size: 13px;
+      line-height: 1.3;
+    }
+    &-card {
+      &__title {
+        font-size: 24px;
+        margin-bottom: 2px;
+      }
+      &__description {
+        font-size: 12px;
+      }
+      &__img {
+        width: 80%;
+        border-radius: 0;
+      }
+    }
+  }
 }
