--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -1,69 +1,455 @@
-.modal{
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
+.modal {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0000007c;
+  display: none;
+
+  &_wrapper {
+    margin: auto;
+    width: 30%;
+  }
+  &_content {
+    position: absolute;
+    top: 10%;
+    width: 30%;
+  }
+
+  &_title--wrapper {
+    background-color: #c99b67;
     width: 100%;
-    height: 100vh;
-    background: #0000007c;
-    display: none;
+  }
 
-    &_wrapper{
-        margin: auto;
-        width: 30%;
-    }
-    &_content{
-        position: absolute;
-        top: 10%;
-        width: 30%;
-    }
+  &_title {
+    font-weight: var(--font-weight-700);
+    font-size: 44px;
+    line-height: 52px;
+    font-variant: all-small-caps;
+    color: var(--text-color-white);
+    padding: 19px 29px;
+  }
 
-    &_title--wrapper{
-        background-color: #C99B67;
-        width: 100%;
-    }
-    
-    &_title{
-        font-weight: var(--font-weight-700);
-        font-size: 44px;
-        line-height: 52px;
-        font-variant: all-small-caps;
-        color: var(--text-color-white);
-        padding: 19px 29px;
-    }
+  &_content--wrapper {
+    background: #f8f8f2;
+    padding: 50px 30px;
+  }
 
-    &_content--wrapper{
-        background: #F8F8F2;
-        padding: 50px 30px;
-    }
+  &_desc {
+    font-weight: var(--font-weight-700);
+    font-size: 24px;
+    line-height: 34px;
+    color: #000000;
+  }
 
-    &_desc{
-        font-weight: var(--font-weight-700);
-        font-size: 24px;
-        line-height: 34px;
-        color: #000000;
-    }
+  &_confirmation {
+    font-weight: var(--font-weight-400);
+    font-size: 18px;
+    line-height: 26px;
+    color: var(--text-color-primary);
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    margin: 10px 0 50px 0;
+  }
 
-    &_confirmation{
-        font-weight: var(--font-weight-400);
-        font-size: 18px;
-        line-height: 26px;
-        color: var(--text-color-primary);
-        mix-blend-mode: normal;
-        opacity: 0.8;
-        margin: 10px 0 50px 0;
-    }
+  &_checkout {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    &_checkout{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+  &_price {
+    font-weight: var(--font-weight-700);
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+  }
+}
+
+@media only screen and (max-width: 1344px) {
+  .modal {
+    &_title {
+      font-size: 41px;
+      line-height: 49px;
     }
 
-    &_price{
-        font-weight: var(--font-weight-700);
-        font-size: 24px;
-        line-height: 28px;
-        color: #000000;
+    &_desc {
+      font-size: 21px;
+      line-height: 31px;
     }
+
+    &_confirmation {
+      font-size: 16px;
+      line-height: 24px;
+      margin: 10px 0 45px 0;
+    }
+
+    &_price {
+      font-size: 21px;
+      line-height: 25px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1265px) {
+  .modal {
+    &_title {
+      font-size: 37px;
+      line-height: 45px;
+      padding: 18px 28px;
+    }
+
+    &_desc {
+      font-size: 19px;
+      line-height: 29px;
+    }
+
+    &_confirmation {
+      font-size: 15px;
+      line-height: 23px;
+      margin: 10px 0 40px 0;
+    }
+
+    &_price {
+      font-size: 19px;
+      line-height: 23px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1154px) {
+  .modal {
+    &_title {
+      font-size: 35px;
+      line-height: 43px;
+      padding: 17px 27px;
+    }
+
+    &_desc {
+      font-size: 18px;
+      line-height: 28px;
+    }
+
+    &_confirmation {
+      font-size: 14px;
+      line-height: 22px;
+      margin: 10px 0 40px 0;
+    }
+
+    &_price {
+      font-size: 18px;
+      line-height: 22px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1095px) {
+  .modal {
+    &_title {
+      font-size: 33px;
+      line-height: 41px;
+      padding: 16px 26px;
+    }
+
+    &_desc {
+      font-size: 17px;
+      line-height: 27px;
+    }
+
+    &_confirmation {
+      font-size: 13px;
+      line-height: 21px;
+      margin: 10px 0 40px 0;
+    }
+
+    &_price {
+      font-size: 17px;
+      line-height: 21px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1036px) {
+  .modal {
+    &_title {
+      font-size: 31px;
+      line-height: 39px;
+      padding: 15px 25px;
+    }
+
+    &_desc {
+      font-size: 16px;
+      line-height: 26px;
+    }
+
+    &_confirmation {
+      font-size: 14px;
+      line-height: 20px;
+      margin: 10px 0 40px 0;
+    }
+
+    &_price {
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+}
+
+@media only screen and (max-width: 977px) {
+  .modal {
+    &_title {
+      font-size: 29px;
+      line-height: 37px;
+      padding: 15px 25px;
+    }
+
+    &_desc {
+      font-size: 15px;
+      line-height: 25px;
+    }
+
+    &_confirmation {
+      font-size: 13px;
+      line-height: 19px;
+      margin: 10px 0 40px 0;
+    }
+
+    &_price {
+      font-size: 15px;
+      line-height: 19px;
+    }
+  }
+}
+
+@media only screen and (max-width: 925px) {
+  .modal {
+    &_title {
+      font-size: 27px;
+      line-height: 35px;
+      padding: 15px 25px;
+    }
+
+    &_content--wrapper {
+      padding: 40px 20px;
+    }
+
+    &_desc {
+      font-size: 14px;
+      line-height: 24px;
+    }
+
+    &_confirmation {
+      font-size: 12px;
+      line-height: 18px;
+      margin: 10px 0 40px 0;
+    }
+
+    &_price {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+}
+
+@media only screen and (max-width: 873px) {
+  .modal {
+    &_title {
+      font-size: 25px;
+      line-height: 33px;
+      padding: 13px 23px;
+    }
+
+    &_content--wrapper {
+      padding: 30px 17px;
+    }
+
+    &_desc {
+      font-size: 13px;
+      line-height: 23px;
+    }
+
+    &_confirmation {
+      font-size: 11px;
+      line-height: 17px;
+      margin: 10px 0 30px 0;
+    }
+
+    &_price {
+      font-size: 13px;
+      line-height: 17px;
+    }
+  }
+}
+
+@media only screen and (max-width: 807px) {
+  .modal {
+    &_title {
+      font-size: 23px;
+      line-height: 31px;
+      padding: 11px 21px;
+    }
+
+    &_content--wrapper {
+      padding: 25px 15px;
+    }
+
+    &_desc {
+      font-size: 12px;
+      line-height: 22px;
+    }
+
+    &_confirmation {
+      font-size: 10px;
+      line-height: 16px;
+      margin: 10px 0 25px 0;
+    }
+
+    &_price {
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+}
+
+@media only screen and (max-width: 741px) {
+  .modal {
+    &_title {
+      font-size: 19px;
+      line-height: 25px;
+      padding: 10px 20px;
+    }
+
+    &_content--wrapper {
+      padding: 23px 13px;
+    }
+
+    &_desc {
+      font-size: 10px;
+      line-height: 20px;
+    }
+
+    &_confirmation {
+      font-size: 8px;
+      line-height: 14px;
+      margin: 10px 0 23px 0;
+    }
+
+    &_price {
+      font-size: 10px;
+      line-height: 14px;
+    }
+  }
+}
+
+@media only screen and (max-width: 631px) {
+  .modal {
+    &_title {
+      font-size: 17px;
+      line-height: 23px;
+      padding: 9px 19px;
+    }
+
+    &_content--wrapper {
+      padding: 20px 10px;
+    }
+
+    &_desc {
+      font-size: 9px;
+      line-height: 17px;
+    }
+
+    &_confirmation {
+      font-size: 7px;
+      line-height: 13px;
+      margin: 9px 0 20px 0;
+    }
+
+    &_price {
+      font-size: 9px;
+      line-height: 13px;
+    }
+  }
+
+  .plan_btn {
+    width: fit-content !important;
+    padding: 9px 17px;
+    font-size: 9px;
+    border-radius: 100px;
+  }
+}
+
+@media only screen and (max-width: 571px) {
+  .modal {
+    &_title {
+      font-size: 15px;
+      line-height: 20px;
+      padding: 7px 17px;
+    }
+
+    &_content--wrapper {
+      padding: 19px 9px;
+    }
+
+    &_desc {
+      font-size: 8px;
+      line-height: 16px;
+    }
+
+    &_confirmation {
+      font-size: 6px;
+      line-height: 12px;
+      margin: 8px 0 19px 0;
+    }
+
+    &_price {
+      font-size: 8px;
+      line-height: 12px;
+    }
+  }
+
+  .plan_btn {
+    width: fit-content !important;
+    padding: 5px 10px;
+    font-size: 7px;
+    border-radius: 20px;
+  }
+}
+
+@media only screen and (max-width: 505px) {
+  .modal {
+    &_title {
+      font-size: 10px;
+      line-height: 15px;
+      padding: 5px 15px;
+    }
+
+    &_content--wrapper {
+      padding: 17px 7px;
+    }
+
+    &_desc {
+      font-size: 7px;
+      line-height: 15px;
+    }
+
+    &_confirmation {
+      font-size: 5px;
+      line-height: 11px;
+      margin: 7px 0 17px 0;
+    }
+
+    &_price {
+      font-size: 7px;
+      line-height: 11px;
+    }
+  }
+
+  .plan_btn {
+    width: fit-content !important;
+    padding: 3px 7px;
+    font-size: 5px;
+    border-radius: 15px;
+  }
 }
